# rust_go_json_performance_test

./: .gitignore  JSONV2_ANALYSIS.md  JSONV2_NOTES.md  Makefile  PERFORMANCE_ANALYSIS.md  README.md  plot_benchmark.py
go-bench/: .gitignore  go.mod  http_request.go  http_request_benchmark_test.go  http_request_jsonv2_test.go
rust-bench/: Cargo.toml  README.md
rust-bench/benches/: waf_http_request_json.rs
rust-bench/src/: lib.rs
