[package]
name = "waf-http-request-serde-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = "2.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "waf_http_request_json"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
